# gear

./: .gitmodules  Cargo.toml  Genefile  build.rs  gear.d.ts  global.d.ts  shell.nix  system.d.ts
examples/c/: Gearfile  gear.toml  tools.js  tools_v1.js  tools_v2.js
examples/c/include/: bye.h  common.h  hello.h
examples/c/src/: bye.c  hello.c  main.c
src/: artifact.rs  builder.rs  cmdline.rs  common.rs  compiler.rs  console.rs  diagnostic.rs  directory.rs  extensions.rs  goal.rs  hasher.rs  lib.rs  main.rs  processor.rs  refs.rs  result.rs  rule.rs  scope.rs  server.rs  store.rs  system.rs  utils.rs  value.rs  variable.rs  watcher.rs
src/compiler/: compiler.rs  config.rs  gcc.rs  platform.rs  symbols.rs  triple.rs  utils.rs
src/compiler/triple/: arch.rs  env.rs  format.rs  os.rs  vendor.rs
src/compiler/utils/: d_deps_parser.rs  deps_parser.rs  diag_parser.rs  ld_script.rs  size_parser.rs
src/system/: common.rs
src/variable/: check.rs  definition.rs  result.rs  store.rs  validation.rs  value.rs
src/variable/store/: json.rs  toml.rs  yaml.rs
web/: .gitignore  package.json  rollup.config.js
web/dev/: data.ts  main.ts
web/public/: index.html
web/src/: App.svelte  Graph.svelte  Progress.svelte  api.ts  graph.ts  storage.ts
