[package]
name = "gear"
description = "Simple and flexible build system"
version = "0.1.0"
authors = ["K. <kayo@illumium.org>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/katyo/gear"
repository = "https://github.com/katyo/gear"
license = "Apache-2.0"
keywords = ["make", "configure", "build", "command-line", "utility"]
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[badges.maintenance]
status = "experimental"

[dependencies.derive_deref]
version = "^1"

[dependencies.structopt]
version = "^0.3"
features = ["paw"]

[dependencies.paw]
version = "^1"

[dependencies.log]
version = "^0.4"

[dependencies.pretty_env_logger]
version = "^0.4"

[dependencies.serde]
version = "^1"
features = ["derive"]

[dependencies.either]
version = "^1"

[dependencies.indexmap]
version = "^1"

[dependencies.fxhash]
version = "^0.2"

[dependencies.weak-table]
version = "^0.3"

[dependencies.nom]
version = "^6"

[dependencies.num_cpus]
version = "^1"

[dependencies.faccess]
version = "^0.2"

[dependencies.which]
version = "^4"

[dependencies.relative-path]
version = "^1"

[dependencies.futures]
version = "^0.3"

[dependencies.async-std]
version = "^1"
features = ["attributes", "unstable"]

[dependencies.async-ctrlc]
version = "^1"
optional = true

[dependencies.notify]
version = "5.0.0-pre.4"
optional = true

[dependencies.rquickjs]
#version = "^0"
#git = "https://github.com/katyo/rquickjs"
#branch = "macro"
path = "../rquickjs"
default-features = false
features = ["exports", "loader", "either", "indexmap", "classes", "properties", "async-std", "macro"]

[features]
default = [
  #"parallel"
  "watch",
]
parallel = ["rquickjs/parallel"]
watch = ["notify"]
